--- a/index.html
+++ b/index.html
@@ -231,5 +231,14 @@ for (i = 0; i < coll.length; i++) {
     } 
 	});
 }
+		<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZC4N730V0J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZC4N730V0J');
+</script>
 	</script> 
 </html>
