--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@ body {
       </style>
 
   </head>
+	  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZC4N730V0J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZC4N730V0J');
+</script>
 
   <body style="text-align: center">
 
@@ -214,30 +223,5 @@ body {
 	  </div>
 	  
 	  
-	  
-<!--This script for the menu animation-->
-var coll = document.getElementsByClassName("collapsible-menu");
-var i;
-
-for (i = 0; i < coll.length; i++) {
-  coll[i].addEventListener("click", function() {
-    this.classList.toggle("active");
-    var content = this.nextElementSibling;
-    if (content.style.maxHeight){
-      content.style.maxHeight = null;
-    } else {
-      content.style.maxHeight = content.scrollHeight + "px";
-    } 
-	});
-}
-		<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZC4N730V0J"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-ZC4N730V0J');
-
 	</script> 
 </html>
