--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ body {
       </style>
 
   </head>
+	  <script src="script.js"></script>
 	  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZC4N730V0J"></script>
 <script>
