--- a/4_Benoit Badiashile.html
+++ b/4_Benoit Badiashile.html
@@ -72,7 +72,7 @@ body {
       </style>
 
   </head>
-    <script src="script.js"></script>
+       <script src="script.js"></script>
 	  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZC4N730V0J"></script>
 <script>
@@ -81,6 +81,10 @@ body {
   gtag('js', new Date());
 
   gtag('config', 'G-ZC4N730V0J');
+	
+	 function redirectToWebsite() {
+      window.location.href = "https://www.instagram.com/benoit.badiashile/";
+    }
 </script>
 
   <body style="text-align: center">
@@ -154,7 +158,9 @@ body {
   <tbody>
     <tr>
       <th style="color: #000000" scope="col"><img src="media file/player/4_Badiashile_profile_avatar_22-23-removebg.png" width="573" height="860" alt=""/></th>
-      <th style="text-align: left" scope="col">Name: Benoit Badiashile
+      <th style="text-align: left" scope="col"> <button onclick="redirectToWebsite()"><img src="media file/socialmedia/Instagram_logo_2022.svg.png" width="50%" height="50%" alt=""/></button>
+		  <br>
+		  Name: Benoit Badiashile
 <br><br>
 National Team : France
 <br><br>
