--- a/32_Marc Cucurella.html
+++ b/32_Marc Cucurella.html
@@ -86,7 +86,7 @@ body {
       window.location.href = "https://www.instagram.com/cucurella3/";
     }
 </script>
- 
+   </head>
 
   <body style="text-align: center">
   
