--- a/5_Enzo Fernandez.html
+++ b/5_Enzo Fernandez.html
@@ -72,7 +72,7 @@ body {
       </style>
 
  
-    <script src="script.js"></script>
+       <script src="script.js"></script>
 	  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZC4N730V0J"></script>
 <script>
@@ -81,7 +81,12 @@ body {
   gtag('js', new Date());
 
   gtag('config', 'G-ZC4N730V0J');
+	
+	 function redirectToWebsite() {
+      window.location.href = "https://www.instagram.com/enzojfernandez/";
+    }
 </script>
+ 
  </head>
   <body style="text-align: center">
   
@@ -154,7 +159,9 @@ body {
   <tbody>
     <tr>
       <th style="color: #000000" scope="col"><img src="media file/player/5_Fernandez_profile_avatar_temp_22-23-removebg.png" width="573" height="860" alt=""/></th>
-      <th style="text-align: left" scope="col">Name: Enzo Fernandez
+      <th style="text-align: left" scope="col"> <button onclick="redirectToWebsite()"><img src="media file/socialmedia/Instagram_logo_2022.svg.png" width="50%" height="50%" alt=""/></button>
+		  <br>
+		  Name: Enzo Fernandez
 <br><br>
 National Team : Argentina
 <br><br>
