--- a/4_Benoit Badiashile.html
+++ b/4_Benoit Badiashile.html
@@ -71,11 +71,15 @@ body {
 		  }		  
       </style>
 
-
-       <script src="script.js"></script>
-	  
+	  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZC4N730V0J"></script>
 <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-ZC4N730V0J');
+	
 	 function redirectToWebsite() {
       window.location.href = "https://www.instagram.com/benoit.badiashile/";
     }
