--- a/index.html
+++ b/index.html
@@ -14,20 +14,7 @@
   <meta charset="utf-8">
   <title>index</title>
 
-<<<<<<< HEAD
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZC4N730V0J"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-ZC4N730V0J');
-
-</script>
-
-
-=======
+<style>
 /*Desgin a collapsible for menu and control*/
 .collapsible-menu {
   background-color: rgba(51,153,255,1);
